@@ -1676,6 +1676,8 @@ FileItem.storage.compact=Compact
 MessageBoxWindow.rememberdecision=Remember my decision
 ConfigView.section.interface.cleardecisions=Clear remembered dialog decisions
 ConfigView.section.interface.cleardecisionsbutton=Clear
+ConfigView.section.interface.cleartrackers=Clear remembered trackers
+ConfigView.section.interface.cleartrackersbutton=Clear
 
 configureWizard.welcome.usermodes=This User Proficiency setting will determine the level of the options displayed in Tools > Options. It is in your best interest to set it properly.
 
