@@ -3,6 +3,7 @@ AZUREUS CHANGELOG
 
 2007.0x.xx | Azureus 3.0.0.9
 
+FEATURE: Core | Option to clear stored tracker list used for creating torrents [amc1]
 FEATURE: UI   | Option to add full UPnP debug information to the log view [amc1]
 
 2007.03.15 | Azureus 3.0.0.8
